--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node http.js",
+    "populate-db": "node src/scripts/populate-db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.15",
     "uuid": "^8.3.1"
   }
